syntax = "proto3";



option java_multiple_files = true;

option java_package = "SpendingTracker_GRPC";

option java_outer_classname = "SmartServiceImpl";



package extra_smart;



service SpendingTracker {

rpc RecordTransaction (stream TransactionRequest) returns (stream TransactionResponse) {}

}


message TransactionRequest {

float income = 1;

float spending = 2;

}



message TransactionResponse {

float balance = 1;

float currentBalance=2;

string message=3;

}


